# pauli-coloring-benchmark

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  benchmark_qc.py  benchmark_sim.py  benchmark_smpl.py  coloring_test.ipynb  convert_ising.py  debug.py  index.html  launch_benchmark_sim.sh  nuke.py  pcb.html  pyproject.toml  results-reordering.ipynb  results-run.ipynb  results-smpl.ipynb  results.ipynb  search.js
.etc/: setup.py
.etc/.github/workflows/: pypi.yml
.github/workflows/: gh-pages.yml
dataset/: README.md
old/: compress_hdf5.py  compress_qpy.py  ibmq_save_account.py  merge_reordering_result_dbs.py  qaoa.py  rm_invalid_qpy.py
pcb/: __init__.py  __main__.py  benchmark.html  benchmark.py  coloring.py  hamlib.html  hamlib.py  io.py  logging.html  pcb.py  qaoa.html  qaoa.py  qiskit.html  qiskit.py  reordering.html  utils.html  utils.py
pcb/benchmark/: __init__.py  consolidate.html  consolidate.py  qaoa.html  qaoa.py  reorder.html  reorder.py  run.html  run.py  sample.py  simulate.html  simulate.py  utils.html  utils.py
pcb/lib/: coloring.c
pcb/reordering/: __init__.py  degree.py  degree_c.py  misra_gries.py  saturation.py  simplicial.py  utils.py
