# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example
[project]
    authors = [{ name = "Cédric Ho Thanh" }]
    dependencies = [
        "beautifulsoup4>=4.12.3",
        "click>=8.1.7",
        "filelock>=3.17.0",
        "h5py>=3.12.1",
        "joblib>=1.4.2",
        "loguru>=0.7.2",
        "networkx>=3.4.2",
        "pandas>=2.2.3",
        "qiskit-aer-gpu>=0.15.1",
        "qiskit>=1.3.1",
        "requests>=2.32.3",
        "tqdm>=4.67.1",
        "qiskit-ibm-runtime==0.35.0",
        "scipy==1.15.1",
]
    description = ""
    license = { file = "LICENSE" }
    name = "pcb"
    readme = "README.md"
    requires-python = ">=3.12,<3.13"
    version = "0.0.0"
    [project.urls]
        "Bug Tracker" = "https://github.com/altaris/pcb/issues"
        Changelog     = "https://github.com/altaris/pcb/blob/main/CHANGELOG.md"
        Documentation = "https://github.com/altaris/pcb"
        Homepage      = "https://github.com/altaris/pcb"
        Repository    = "https://github.com/altaris/pcb.git"
    [project.optional-dependencies]
        jupyter = [
            "ipywidgets>=8.1.5",
            "jupyter-black>=0.4.0",
            "matplotlib>=3.10.0",
            "pylatexenc>=2.10",
            "seaborn>=0.13.2",
        ]
# https://mypy.readthedocs.io/en/stable/config_file.html#config-file-format
[tool.mypy]
    check_untyped_defs     = true
    disallow_untyped_defs  = true
    ignore_missing_imports = true
    pretty                 = true
    python_version         = "3.12"
    strict_equality        = true
    warn_redundant_casts   = true
    warn_return_any        = true
    warn_unreachable       = true
    warn_unused_ignores    = true
[tool.pyright]
    include = ["pcb"]
[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "template.py",
        "venv",
    ]
    line-length = 79
    target-version = "py311"
    [tool.ruff.format]
        docstring-code-format      = true
        docstring-code-line-length = "dynamic"
        indent-style               = "space"
        line-ending                = "auto"
        quote-style                = "double"
        skip-magic-trailing-comma  = false
    [tool.ruff.lint]
        # https://flake8.pycqa.org/en/latest/user/error-codes.html
        # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
        # select = ["E4", "E7", "E9", "F"]
        fixable = ["ALL"]
        ignore = [
            "E722", # Do not use bare `except`
            "E731", # Do not assign a `lambda` expression, use a `def`
        ]
[tool.uv]
    dev-dependencies = [
        "ipykernel>=6.29.5",
        "pdoc>=15.0.1",
        "types-requests>=2.32.0.20241016",
    ]
